@@ -2,6 +2,12 @@
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*sun-jdk-1.7.0.0_alpha15 (21 Jul 2007)
+
+  21 Jul 2007; Petteri Räty <betelgeuse@gentoo.org>
+  +sun-jdk-1.7.0.0_alpha15.ebuild:
+  Version bump.
+
 *sun-jdk-1.7.0.0_alpha15 (14 Jul 2007)
 
   14 Jul 2007; Petteri Räty <betelgeuse@gentoo.org>
